syntax = "proto3";
package appuser;

import "google/protobuf/timestamp.proto";
option go_package="shared-libraries/models/appuser";


message User {
    string ID =1;
    string firstName =2;
    string lastName = 3;
    google.protobuf.Timestamp DOB = 4;
    string gender = 5;
    string BVN = 6;
    string address = 7;
    string street = 8;
    string city = 9;
    string postalCode = 10;
    string state = 11;
    string country = 12;
    uint32 countryID = 13;
    string photo = 900;
    string passport = 901;
    string IDCard = 902;
    string referrer = 14;
    string refCode = 15;
    string how_did_u_hear_about_us = 16;
    string userName = 17;
    string email=18;
    google.protobuf.Timestamp emailVerifiedAt = 19;
    bytes password = 20;
    bytes pin = 21;
    string phoneNumber = 22;
    google.protobuf.Timestamp phoneVerifiedAt = 23;
    enum accountType {
        PERSONAL = 0;
        BUSINESS = 1;
    };
    accountType ACCOUNT_TYPE = 24;
    string lastCardRequested = 25;
    bool isProfileCompleted = 26;
    repeated string cards =27;
    repeated string wallets = 28;
    google.protobuf.Timestamp createdAt = 29;
    google.protobuf.Timestamp updatedAt = 30;
}

message UserIDArg{
    string ID = 1;
    string email = 2;
    string userName = 3;
    string BVN = 4;
}

message UserArg{
    User userPayload = 1;
}

service UserService{
    rpc FindUser (UserArg) returns (User){}
    rpc Welcome (UserArg) returns (User){}
    rpc UpdateUser (UserArg) returns (User){}
}
