syntax = "proto3";
package appuser;

option go_package="shared/models/appuser";


message User {
    string ID =1;
    string firstName =2;
    string lastName = 3;
    string DOB = 4;
    string gender = 5;
    string BVN = 6;
    string address = 7;
    string street = 8;
    string city = 9;
    string postalCode = 10;
    string state = 11;
    string country = 12;
    uint32 countryID = 13;
    string photo = 900;
    string passport = 901;
    string IDCard = 902;
    string referrer = 14;
    string refCode = 15;
    string how_did_u_hear_about_us = 16;
    string userName = 17;
    string email=18;
    string emailVerifiedAt = 19;
    bytes password = 20;
    bytes pin = 21;
    string phoneNumber = 22;
    string phoneVerifiedAt = 23;
    enum accountType {
        PERSONAL = 0;
        BUSINESS = 1;
    };
    accountType ACCOUNT_TYPE = 24;
    string lastCardRequested = 25;
    bool isProfileCompleted = 26;
    string cards =27;
    string wallets = 28;
    string createdAt = 29;
    string updatedAt = 30;
}

message Empty {
}

message Users {
    repeated User results = 1;
}

message UpdateArg {
    User oldUser = 1;
    User newObj = 2;
}

message UserArg{
    User userPayload = 1;
}

service UserService{
    rpc AllUsers (Empty) returns (Users){}
    rpc FindUsers (UserArg) returns (Users){}
    rpc GetUser (UserArg) returns (User){}
    rpc AddUser (UserArg) returns (User){}
    rpc UpdateUser (UpdateArg) returns (Empty){}
    rpc DeleteUser (UserArg) returns (Empty){}
}
